polish smell code